--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+# roll-up cache
+.rpt2_cache
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
