--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bili": "^4.8.0",
     "node-sass": "^4.12.0",
     "paper": "0.12.0",
+    "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-typescript2": "^0.21.1",
     "rollup-plugin-vue": "^5.0.0",
     "typescript": "^3.5.1",
