--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "@infolks/labelmore-devkit": "^1.3.10",
-    "vue": "^2.6.10",
-    "vuex": "^3.1.1"
+    "@infolks/labelmore-devkit": "^1.3.14"
   }
 }
