--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/infolks/labelmore-essentials#readme",
   "devDependencies": {
+    "@infolks/labelmore-devkit": "^1.4.10",
     "@types/paper": "^0.11.14",
     "bili": "^4.8.0",
     "node-sass": "^4.12.0",
@@ -33,7 +34,5 @@
     "typescript": "^3.5.1",
     "vue-template-compiler": "^2.6.10"
   },
-  "dependencies": {
-    "@infolks/labelmore-devkit": "^1.4.9"
-  }
+  "dependencies": {}
 }
